Fixed issue with Featured Early Access banner. Moved the discount percentages to ensure they do not overlap tags.

--- a/css/enhancedsteam.css
+++ b/css/enhancedsteam.css
@@ -481,7 +481,6 @@ img.platform_small, .platform_img {
 .es_overlay {
 	position: absolute;
 	z-index: 0;
-	left: 0px;
 }
 .es_card_search {
 	padding:0px 2px;
